--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,6 +15,9 @@ body {
   margin:auto;
 }
 
+.boardContainer h1 {
+  text-align: center;
+}
 table {
   top:0; left:0; right:0; bottom:0;
   margin:auto;
@@ -32,6 +35,22 @@ td:hover {
   background-color: lightblue;
 }
 
+td:active {
+  background-color: darkblue;
+}
+
 .red {
   background-color: red;
+}
+
+.black {
+  background-color: black;
+}
+
+.green {
+  background-color: green !important;
+}
+
+.white {
+  background-color: white;
 }
